--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
             <h3>Alice gatera</h3>
         </div>
         <ul class="nav-links">
-            <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
             <a href="/index.html">Home</a>
             <a href="../blog/blog.html">Blogs</a>
             <a href="../Htmls/contact.html"> Contact </a>
-            <!-- <a href="./Admin/articleDashboard.html">Dashboard</a> -->
             <a href="./Htmls/login.html">Login</a>
         </ul>
-        <div class="burger">
+        <div class="burgerIcon">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
@@ -198,7 +196,7 @@
     </section>
 
 </footer>
-<script src="./Scripts/menu.js">
+<script src="/Scripts/menu.js">
     </script>
   </body>
   </html>
