--- a/Htmls/Admin/messageDashboard.html
+++ b/Htmls/Admin/messageDashboard.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../../Css/Css/messageDashboard.css">
+    
     <title>Alice-Dashboard</title>
 </head>
 <body>
@@ -32,15 +33,15 @@
                                 <em class="menu-modulosFeed"></em>
                             </li> -->
                             <li class="menu-modulosBt">
-                                <a href="../Admin/userDashboard.html" class="menu-modulosBt-mainBt">Users</a>
+                                <a href="#" class="menu-modulosBt-mainBt"></a>
                                 <em class="menu-modulosFeed"></em>
                             </li>
                             <li class="menu-modulosBt">
-                                <a href="../Admin/messageDashboard.html" class="menu-modulosBt-mainBt">Messages</a>
+                                <a href="../Admin/messageDashboard.html" class="menu-modulosBt-mainBt"></a>
                                 <em class="menu-modulosFeed"></em>
                             </li>
                             <li class="menu-modulosBt">
-                                <a href="../Admin/articleDashboard.html" class="menu-modulosBt-mainBt">Articles</a>
+                                <a href="../Admin/articleDashboard.html" class="menu-modulosBt-mainBt"></a>
                                 <em class="menu-modulosFeed"></em>
                             </li>
                         </ul>
@@ -100,8 +101,8 @@
                     </div>
                 </div>
                 <div class="header-menu">
-                    <!-- <div class="header-search ">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="imgView" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.213" style="enable-background:new 0 0 485.213 485.213;" xml:space="preserve" class="spt" data-id="34097" data-kw="magnifier12">
+                    <div class="header-search ">
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="imgView" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.213" style="enable-background:new 0 0 485.213 485.213;" xml:space="preserve" class="spt" data-id="34097" data-kw="magnifier12"> -->
     <g>
         <g>
             <path d="M363.909,181.955C363.909,81.473,282.44,0,181.956,0C81.474,0,0.001,81.473,0.001,181.955s81.473,181.951,181.955,181.951    C282.44,363.906,363.909,282.437,363.909,181.955z M181.956,318.416c-75.252,0-136.465-61.208-136.465-136.46    c0-75.252,61.213-136.465,136.465-136.465c75.25,0,136.468,61.213,136.468,136.465    C318.424,257.208,257.206,318.416,181.956,318.416z"></path>
@@ -139,9 +140,9 @@
     <g>
     </g>
     </svg>
-                        <input type="text" value="Some search field" /></p>
+                        <!-- <input type="text" value="" /></p> -->
                         <div class="clear"></div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <div class="menu-box">
@@ -152,7 +153,7 @@
                                 <ul >
                                     <li>
                                         <div class="menu-item"><a href="#"  class="logout">Logout</a>
-                                          <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
+                                          <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
     <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
     </g>
@@ -186,12 +187,12 @@
     </g>
     <g>
     </g>
-    </svg>
+    </svg> -->
                                       </div>
                                     </li>
                                     <li>
-                                        <div class="menu-item"><a href="../Admin/userDashboard.html" class="menu-anchor" data-menu="2">Users</a>
-                                          <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
+                                        <div class="menu-item"><a href="#" class="menu-anchor" data-menu="2">Users</a>
+                                          <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
     <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
     </g>
@@ -225,15 +226,15 @@
     </g>
     <g>
     </g>
-    </svg>
+    </svg> -->
                                       </div>
                                     </li>
                                     <li>
                                         <div class="menu-item"><a href="../Admin/messageDashboard.html" class="">Messages</a></div>
                                     </li>
                                     <li>
-                                        <div class="menu-item"><a href="./articleDashboard.html" class="menu-anchor"  data-menu="3">Articles</a>
-                                      <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
+                                        <div class="menu-item"><a href="../Admin/articleDashboard.html" class="menu-anchor"  data-menu="3">Articles</a>
+                                      <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
     <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
     </g>
@@ -267,14 +268,15 @@
     </g>
     <g>
     </g>
-    </svg></div>
+    </svg> -->
+</div>
                                     </li>
                                     <!-- <li>
                                         <div class="menu-item"><a href="#" class="">Item menu 5</a></div>
                                     </li> -->
-                                     <li>
+                                     <!-- <li> -->
                                         <!-- <div class="menu-item"><a href="#" class="menu-anchor"  data-menu="4">Item menu 6</a> -->
-                                      <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
+                                      <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"> -->
     <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
     </g>
@@ -316,7 +318,7 @@
                             <div class="submenu menu" data-menu="1">
                                 <div class="submenu-back">
                                     <div class="menu-item">
-                                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
+                                      <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt"> -->
     <g>
         <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0   c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744   c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
     </g>
@@ -356,9 +358,9 @@
                                 <ul>
                                     <li>
                                         <div class="menu-item"><a href="#" class="menu-anchor" data-menu="5">Subitem</a>
-                                      <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
+                                      <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"> -->
     <g>
-        <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
+        <!-- <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
     </g>
     <g>
     </g>
@@ -390,16 +392,16 @@
     </g>
     <g>
     </g>
-    </svg>
+    </svg> -->
                                       </div>
-                                    </li>
+                                    <!-- </li>
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                             <div class="submenu menu" data-menu="2">
                                 <div class="submenu-back">
@@ -493,7 +495,7 @@
     </svg>
                                       <a href="#" class="menu-back">BACK</a></div>
                                 </div>
-                                <ul>
+                                <!-- <ul>
                                     <li>
                                         <div class="menu-item"><a href="#" >Subitem</a></div>
                                     </li>
@@ -503,7 +505,7 @@
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                             <div class="submenu menu" data-menu="4">
                                 <div class="submenu-back">
@@ -545,7 +547,7 @@
     </svg>
                                       <a href="#" class="menu-back">BACK</a></div>
                                 </div>
-                                <ul>
+                                <!-- <ul>
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
@@ -555,7 +557,7 @@
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                             <div class="submenu menu" data-menu="5">
                                 <div class="submenu-back">
@@ -597,7 +599,7 @@
     </svg>
                                       <a href="#" class="menu-back">BACK</a></div>
                                 </div>
-                                <ul>
+                                <!-- <ul>
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
@@ -607,7 +609,7 @@
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
                             <div class="clear"></div>
                         </div>
@@ -619,16 +621,14 @@
             <div class="conteudo-inner">
                 <div class="conteudo-wrapper">
                     <h1>Message</h1>
-                    </div>
-                    <div class="conteudo-box">
-                        <div class="conteudo-boxInner">
-                            <div class="main-content">
-                                <ul>
-                                <form id="add-messages"></form>
-                            </ul>
-                                <ul id="messages-list"></ul>
-                            </div>
-                            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </div>
+                <div class="conteudo-box">
+                    <div class="conteudo-boxInner">
+                        <div class="main-content">
+                            <ul>
+                            <form id="add-messages"></form>
+                        </ul>
+                            <ul id="messages-list"></ul>
                         </div>
                     </div>
                 </div>
@@ -641,10 +641,9 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
-    <!-- <script src="../../Scripts/config.js"></script> -->
-    <!-- <script src="../../Scripts/blogDashboard.js"></script> -->
-    <!-- <script src="../../Scripts/dashboard.js"></script> -->
-    <script src="../../Scripts/contact.js"></script>
-                       
+    <script src="../../Scripts/config.js"></script>
+ <script src="../../Scripts/DisplayMessage.js"></script>
+    <script src="../../Scripts/dashboard.js"></script>
+  <script src="../../Scripts/logout.js"></script>
 </body>
 </html>
