--- a/Htmls/contact.html
+++ b/Htmls/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="../Css/bootstrap.css">   -->
     <link rel="stylesheet" href="../Css/Css/contact.css">
     <link rel="stylesheet" href="../Css/sharedFooter.css">
     <link rel="stylesheet" href="../Css/Css/sharedMenu.css">
@@ -16,14 +15,12 @@
       <h3>Alice gatera</h3>
   </div>
   <ul class="nav-links">
-    <!-- <img src="/images/logoA.jpg" alt="" class="logo"> -->
     <a href="/index.html">Home</a>
     <a href="../blog/blog.html">Blogs</a>
     <a href="../Htmls/contact.html"> Contact </a>
-    <!-- <a href="./Admin/articleDashboard.html">Dashboard</a> -->
     <a href="./login.html">Login</a>
   </ul>
-  <div class="burger">
+  <div class="burgerIcon">
       <div class="line1"></div>
       <div class="line2"></div>
       <div class="line3"></div>
@@ -76,21 +73,10 @@
   </section>
 
 </footer>
-
-    <!-- <script>
-        function myFunction() {
-          var x = document.getElementById("myTopnav");
-          if (x.className === "topnav") {
-            x.className += " responsive";
-          } else {
-            x.className = "topnav";
-          }
-        }
-        </script> -->
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
-<!-- <script src="../Scripts/config.js"></script> -->
+<script src="../Scripts/config.js"></script>
 <script src= "../Scripts/contact.js"></script>
 <script src="../Scripts/menu.js"></script>
 
