--- a/Htmls/login.html
+++ b/Htmls/login.html
@@ -22,7 +22,7 @@
                 <a href="../Htmls/contact.html"> Contact </a>
                 <a href="./login.html">Login</a>
             </ul>
-            <div class="burger">
+            <div class="burgerIcon">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
@@ -74,16 +74,7 @@
 </footer>
 
 </section>
-<script>
-    function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
-    }
-    </script>
+
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
@@ -91,7 +82,7 @@
 <script src="../Scripts/config.js" ></script>
 <script src="../Scripts/login.js" ></script>
 <script src="../Scripts/menu.js"></script>
-<!-- <script src="../Scripts/login.js"></script> -->
+
 </body>
 </html>
 
