I make a dashboard responsive

--- a/Htmls/Admin/articleDashboard.html
+++ b/Htmls/Admin/articleDashboard.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div id="hit-menu" class="col-xs-hide col-sm-hide"></div>
-        <div class="menu-mobile-background "></div>
+        <!-- <div class="menu-mobile-background "></div> -->
         <div id="header">
             <div class="header-inner">
                 <div class="header-topo">
@@ -24,14 +24,14 @@
                     <span class="header-nomeEmpresa header-nomeEmpresa_mobile col-xs-show col-sm-show">Dashboard</span>
                     <a href="#" class="brand-icon ">Alice GATERA</a>
                 </div>
-                <div class="header-menu">
+                <!-- <div class="header-menu">
                     <div class="menu-modulos">
-                        <ul class="menu-modulosWrapper ">
+                        <ul class="menu-modulosWrapper "> -->
                             <!-- <li class="menu-modulosBt">
                                 <a href="#" class="logout">Logout</a>
                                 <em class="menu-modulosFeed"></em>
                             </li> -->
-                            <li class="menu-modulosBt">
+                            <!-- <li class="menu-modulosBt">
                                 <a href="#" class="menu-modulosBt-mainBt"></a>
                                 <em class="menu-modulosFeed"></em>
                             </li>
@@ -44,16 +44,16 @@
                                 <em class="menu-modulosFeed"></em>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
     
-                    <div class="clear"></div>
+                    <!-- <div class="clear"></div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div id="menu" class="">
             <div class="menu-header">
-                <span class="shape-remove-shadow_green"></span>
-                <span class="shape-remove-shadow_white"></span>
+                <!-- <span class="shape-remove-shadow_green"></span>
+                <span class="shape-remove-shadow_white"></span> -->
                 <div class="header-topo">
                     <div class="header-controlMenu  col-sm-hide col-xs-hide">
                         <span class="header-nomeEmpresa">Dashboard</span>
@@ -100,9 +100,9 @@
                     </div>
                 </div>
                 <div class="header-menu">
-                    <div class="header-search ">
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="imgView" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.213" style="enable-background:new 0 0 485.213 485.213;" xml:space="preserve" class="spt" data-id="34097" data-kw="magnifier12"> -->
-    <!-- <g>
+                    <!-- <div class="header-search ">
+     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="imgView" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.213" style="enable-background:new 0 0 485.213 485.213;" xml:space="preserve" class="spt" data-id="34097" data-kw="magnifier12"> 
+    <g>
         <g>
             <path d="M363.909,181.955C363.909,81.473,282.44,0,181.956,0C81.474,0,0.001,81.473,0.001,181.955s81.473,181.951,181.955,181.951    C282.44,363.906,363.909,282.437,363.909,181.955z M181.956,318.416c-75.252,0-136.465-61.208-136.465-136.46    c0-75.252,61.213-136.465,136.465-136.465c75.25,0,136.468,61.213,136.468,136.465    C318.424,257.208,257.206,318.416,181.956,318.416z"></path>
             <path d="M471.882,407.567L360.567,296.243c-16.586,25.795-38.536,47.734-64.331,64.321l111.324,111.324    c17.772,17.768,46.587,17.768,64.321,0C489.654,454.149,489.654,425.334,471.882,407.567z"></path>
@@ -138,16 +138,16 @@
     </g>
     <g>
     </g>
-    </svg> -->
+    </svg>
                         <input type="text" value="" /></p>
                         <div class="clear"></div>
-                    </div>
+                    </div>  -->
                 </div>
             </div>
             <div class="menu-box">
                 <div class="menu-wrapper-inner">
                     <div class="menu-wrapper">
-                        <div class="menu-slider">
+                        <!-- <div class="menu-slider"> -->
                             <div class="menu">
                                 <ul >
                                     <li>
@@ -276,7 +276,7 @@
                                      <!-- <li> -->
                                         <!-- <div class="menu-item"><a href="#" class="menu-anchor"  data-menu="4">Item menu 6</a> -->
                                       <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"> -->
-    <g>
+    <!-- <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
     </g>
     <g>
@@ -309,16 +309,16 @@
     </g>
     <g>
     </g>
-    </svg>
+    </svg> -->
                                       </div>
                                     </li> 
                                 </ul>
                             </div>
-                            <div class="submenu menu" data-menu="1">
+                            <!-- <div class="submenu menu" data-menu="1">
                                 <div class="submenu-back">
-                                    <div class="menu-item">
+                                    <div class="menu-item"> -->
                                       <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt"> -->
-    <g>
+    <!-- <g>
         <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0   c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744   c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
     </g>
     <g>
@@ -352,11 +352,11 @@
     <g>
     </g>
     </svg>
-                                      <a href="#" class="menu-back">BACK</a></div>
+                                       <a href="#" class="menu-back">BACK</a></div> 
                                 </div>
                                 <ul>
                                     <li>
-                                        <div class="menu-item"><a href="#" class="menu-anchor" data-menu="5">Subitem</a>
+                                        <div class="menu-item"><a href="#" class="menu-anchor" data-menu="5">Subitem</a> -->
                                       <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"> -->
     <g>
         <!-- <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
@@ -392,7 +392,7 @@
     <g>
     </g>
     </svg> -->
-                                      </div>
+                                      <!-- </div> -->
                                     <!-- </li>
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
@@ -401,11 +401,11 @@
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
                                 </ul> -->
-                            </div>
+                            <!-- </div>
                             <div class="submenu menu" data-menu="2">
                                 <div class="submenu-back">
-                                    <div class="menu-item">
-                                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
+                                    <div class="menu-item"> -->
+                                      <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
     <g>
         <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0   c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744   c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
     </g>
@@ -439,10 +439,10 @@
     </g>
     <g>
     </g>
-    </svg>
-                                      <a href="#" class="menu-back">BACK</a></div>
-                                </div>
-                                <ul>
+    </svg> -->
+                                      <!-- <a href="#" class="menu-back">BACK</a></div>
+                                </div> -->
+                                <!-- <ul>
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
@@ -452,9 +452,9 @@
                                     <li>
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </div>
-                            <div class="submenu menu" data-menu="3">
+                            <!-- <div class="submenu menu" data-menu="3">
                                 <div class="submenu-back">
                                     <div class="menu-item">
                                       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
@@ -493,7 +493,7 @@
     </g>
     </svg>
                                       <a href="#" class="menu-back">BACK</a></div>
-                                </div>
+                                </div> -->
                                 <!-- <ul>
                                     <li>
                                         <div class="menu-item"><a href="#" >Subitem</a></div>
@@ -505,11 +505,11 @@
                                         <div class="menu-item"><a href="#">Subitem</a></div>
                                     </li>
                                 </ul> -->
-                            </div>
+                            <!-- </div>
                             <div class="submenu menu" data-menu="4">
                                 <div class="submenu-back">
-                                    <div class="menu-item">
-                                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
+                                    <div class="menu-item"> -->
+                                      <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
     <g>
         <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0   c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744   c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
     </g>
@@ -543,8 +543,8 @@
     </g>
     <g>
     </g>
-    </svg>
-                                      <a href="#" class="menu-back">BACK</a></div>
+    </svg> -->
+                                      <!-- <a href="#" class="menu-back">BACK</a></div> -->
                                 </div>
                                 <!-- <ul>
                                     <li>
@@ -558,10 +558,10 @@
                                     </li>
                                 </ul> -->
                             </div>
-                            <div class="submenu menu" data-menu="5">
-                                <div class="submenu-back">
-                                    <div class="menu-item">
-                                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
+                            <!-- <div class="submenu menu" data-menu="5">
+                                <div class="submenu-back"> -->
+                                    <!-- <div class="menu-item"> -->
+                                      <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.847 451.847" style="enable-background:new 0 0 451.847 451.847;" xml:space="preserve" class="spt">
     <g>
         <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0   c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744   c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
     </g>
@@ -595,8 +595,8 @@
     </g>
     <g>
     </g>
-    </svg>
-                                      <a href="#" class="menu-back">BACK</a></div>
+    </svg> -->
+                                      <!-- <a href="#" class="menu-back">BACK</a></div> -->
                                 </div>
                                 <!-- <ul>
                                     <li>
