--- a/Htmls/Admin/messageDashboard.html
+++ b/Htmls/Admin/messageDashboard.html
@@ -25,13 +25,13 @@
                     <span class="header-nomeEmpresa header-nomeEmpresa_mobile col-xs-show col-sm-show">Dashboard</span>
                     <a href="#" class="brand-icon ">Alice GATERA</a>
                 </div>
-                <div class="header-menu">
+                <!-- <div class="header-menu">
                     <div class="menu-modulos">
                         <ul class="menu-modulosWrapper ">
-                            <!-- <li class="menu-modulosBt">
+                            <li class="menu-modulosBt">
                                 <a href="#" class="logout">Logout</a>
                                 <em class="menu-modulosFeed"></em>
-                            </li> -->
+                            </li>
                             <li class="menu-modulosBt">
                                 <a href="#" class="menu-modulosBt-mainBt"></a>
                                 <em class="menu-modulosFeed"></em>
@@ -45,7 +45,7 @@
                                 <em class="menu-modulosFeed"></em>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
     
                     <div class="clear"></div>
                 </div>
@@ -139,7 +139,7 @@
     </g>
     <g>
     </g>
-    </svg>
+    </svg> -->
                         <!-- <input type="text" value="" /></p> -->
                         <div class="clear"></div>
                     </div>
@@ -230,7 +230,7 @@
                                       </div>
                                     </li>
                                     <li>
-                                        <div class="menu-item"><a href="../Admin/messageDashboard.html" class="">Messages</a></div>
+                                        <div class="menu-item"><a href="./messageDashboard.html" class="">Messages</a></div>
                                     </li>
                                     <li>
                                         <div class="menu-item"><a href="../Admin/articleDashboard.html" class="menu-anchor"  data-menu="3">Articles</a>
