--- a/Htmls/article.html
+++ b/Htmls/article.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 <link rel="stylesheet" href="../Css/Css/article.css">
 <link rel="stylesheet" href="../Css/sharedFooter.css">
-<link rel="stylesheet" href="../Css/Css/sharedMenu.css">
+<!-- <link rel="stylesheet" href="../Css/Css/sharedMenu.css"> -->
     <title> Read article page</title>
 </head>
 <body>
@@ -81,7 +81,7 @@
 <h3>Comments</h3>
 <form class="add-comment">
     <input type="name" name="name" placeholder="Name"> <br>
-    <input type="email" name="email" placeholder="aligatera15@gmail.com" />
+    <input type="email" name="email" placeholder="email" />
     <textarea name="message" placeholder="Message" rows="4"></textarea> <br>
    
     <input type="submit" value="SEND">
