I fix add article page

--- a/Htmls/singleArticle.html
+++ b/Htmls/singleArticle.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    this is a single article
-    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script> -->
-    <script src="../../Scripts/config.js"></script>
-    <script src="../../Scripts/blogDashboard.js"></script>
-    <script src="../Scripts/singleArticle.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="../Css/Css/showArticle.css">
+    <link rel="stylesheet" href="../Css/Css/sharedMenu.css">    
+</head>
+<body >
+    <nav>
+        <div class="logo">
+            <h3>Alice Gatera</h3>
+        </div>
+        <ul class="nav-links">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../blog/blog.html">Blogs</a></li>
+            <li><a href="../Htmls/contact.html">Contact</a></li>
+            <li><a href="../Htmls/login.html">Login</a></li>
+        </ul>
+        <div class="burgerIcon">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+
+    
+</body>
 </html>
