--- a/Htmls/Admin/messageDashboard.html
+++ b/Htmls/Admin/messageDashboard.html
@@ -103,7 +103,7 @@
                 <div class="header-menu">
                     <div class="header-search ">
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="imgView" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.213" style="enable-background:new 0 0 485.213 485.213;" xml:space="preserve" class="spt" data-id="34097" data-kw="magnifier12"> -->
-    <g>
+    <!-- <g>
         <g>
             <path d="M363.909,181.955C363.909,81.473,282.44,0,181.956,0C81.474,0,0.001,81.473,0.001,181.955s81.473,181.951,181.955,181.951    C282.44,363.906,363.909,282.437,363.909,181.955z M181.956,318.416c-75.252,0-136.465-61.208-136.465-136.46    c0-75.252,61.213-136.465,136.465-136.465c75.25,0,136.468,61.213,136.468,136.465    C318.424,257.208,257.206,318.416,181.956,318.416z"></path>
             <path d="M471.882,407.567L360.567,296.243c-16.586,25.795-38.536,47.734-64.331,64.321l111.324,111.324    c17.772,17.768,46.587,17.768,64.321,0C489.654,454.149,489.654,425.334,471.882,407.567z"></path>
@@ -139,7 +139,7 @@
     </g>
     <g>
     </g>
-    </svg> -->
+    </svg>  -->
                         <!-- <input type="text" value="" /></p> -->
                         <div class="clear"></div>
                     </div>
@@ -233,7 +233,7 @@
                                         <div class="menu-item"><a href="./messageDashboard.html" class="">Messages</a></div>
                                     </li>
                                     <li>
-                                        <div class="menu-item"><a href="../Admin/articleDashboard.html" class="menu-anchor"  data-menu="3">Articles</a>
+                                        <div class="menu-item"><a href="../Admin/articleDashboard.html" class="">Articles</a>
                                       <!-- <svg class="spt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve">
     <g>
         <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744   L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284   c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
