--- a/Htmls/contact.html
+++ b/Htmls/contact.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="../Css/Css/contact.css">
+    <link rel="stylesheet" href="../Css/Css/sharedMenu.css">
     <link rel="stylesheet" href="../Css/sharedFooter.css">
     <!-- <link rel="stylesheet" href="../Css/Css/sharedMenu.css"> -->
     <title> Contact page</title>
 </head>
 <body>
   <div class="container">
+    <nav>
     <div class="logo">
       <h3>Alice gatera</h3>
   </div>
+ 
   <ul class="nav-links">
     <a href="/index.html">Home</a>
     <a href="../blog/blog.html">Blogs</a>
