Fix gh pages links

--- a/Htmls/Admin/articleDashboard.html
+++ b/Htmls/Admin/articleDashboard.html
@@ -641,8 +641,8 @@
     <!-- <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-analytics.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-auth.js"></script>
     <script src="../../Scripts/config.js"></script>
-    <script src="../../blog/blog.js"></script>
-    <script src="../../Scripts/dashboard.js"></script>
+    <!-- <script src="../../blog/blog.js"></script> -->
+    <script src="../../Scripts/blogDashboard.js"></script>
   <script src="../../Scripts/logout.js"></script>
 </body>
 </html>
