--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <h3>Alice gatera</h3>
         </div>
         <ul class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../blog/blog.html">Blogs</a>
-            <a href="../Htmls/contact.html"> Contact </a>
-            <a href="../Htmls/login.html">Login</a>
+            <a href="index.html">Home</a>
+            <a href="blog/blog.html">Blogs</a>
+            <a href="Htmls/contact.html"> Contact </a>
+            <a href="Htmls/login.html">Login</a>
         </ul>
         <div class="burgerIcon">
             <div class="line1"></div>
